# scnftexchange

./: Cargo.toml
interaction/: devnet.sh  devnet.snippets.sh  erdpy-test.sh  erdpy.data-storage.json  main.snippets.sh
meta/: Cargo.toml
meta/src/: main.rs
output/: scvote.abi.json  scvote.imports.json  scvote.wasm  scvote.wat
src/: votecontract.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
